--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title></title>
   </head>
   <body>
-
+    <form action="">
+      <input type="text" name="nome" value="" placeholder="Nome">
+      <input type="text" name="cognome" value="" placeholder="Cognome">
+      <input type="number" name="eta" min="18" max="70">
+      <div name="button">Inserisci</div>
+    </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
     <script src="./assets/js/main.js" charset="utf-8"></script>
   </body>
